Prevent login window flickering on loading due to undefined icon size #1500

--- a/modules/web/themes/halo/app/login-window.scss
+++ b/modules/web/themes/halo/app/login-window.scss
@@ -234,4 +234,9 @@ $cuba-login-password-height: $v-unit-size !default;
       color: #5b5857;
     }
   }
+
+  .c-login-icon {
+    width: 64px;
+    height: 64px;
+  }
 }
